|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 8.0.0rc1

- Core:
  . Implement #[Attr] Attribute syntax as per final vote in RFC
    https://wiki.php.net/rfc/shorter_attribute_syntax_change
  . Fixed bug #80045 (memleak after two set_exception_handler calls with
    __call). (Nikita)

- Date:
  . Fixed bug #80057 (DateTimeImmutable::createFromFormat() does not populate
    time). (Derick)

- FFI:
  . Added FFI\CType::getName() method. (chopins)

03 Sep 2020, PHP 8.0.0beta3

- Calendar:
  . Fixed bug #80007 (Potential type confusion in unixtojd() parameter parsing).
    (Andy Postnikov)

- COM:
  . Fixed bug #55847 (DOTNET .NET 4.0 GAC new location). (cmb)

- DOM:
  . Fixed bug #79968 (DOMChildNode API crash on unattached nodes). (Benjamin)

- Fileinfo:
  . Upgrade to libmagic 5.39. (Anatol)

- Opcache:
  . Fixed bug #80030 (Optimizer segfault with isset on static property with
    undef dynamic class name). (Nikita)

20 Aug 2020, PHP 8.0.0beta2

- SPL:
  . Fixed bug #79987 (Memory leak in SplFileInfo because of missing
    zend_restore_error_handling()). (Dmitry)

06 Aug 2020, PHP 8.0.0beta1

- Core:
  . Fixed bug #78236 (convert error on receiving variables when duplicate [).
    (cmb)
  . Fixed bug #79108 (Referencing argument in a function makes it a reference
    in the stack trace). (Nikita)
  . Fixed bug #79897 (Promoted constructor params with attribs cause crash).
    (Deus Kane)
  . Fixed bug #79946 (Build fails due to undeclared UINT32_C). (Nikita)
  . Fixed bug #77561 (Shebang line not stripped for non-primary script).
    (Nikita)
  . Fixed bug #79948 (Exit in auto-prepended file does not abort PHP execution).
    (Nikita)
  . Fixed bug #65275 (Calling exit() in a shutdown function does not change the
    exit value in CLI). (Nikita)
  . Fixed bug #62294 (register_shutdown_function() does not correctly handle
    exit code). (Nikita)